; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx.c_ahd_clear_fifo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx.c_ahd_clear_fifo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

@DFFSXFRCTL = common dso_local global i64 0, align 8
@RSTCHN = common dso_local global i32 0, align 4
@CLRSHCNT = common dso_local global i32 0, align 4
@SG_STATE = common dso_local global i64 0, align 8
@FETCH_INPROG = common dso_local global i32 0, align 4
@CCSGCTL = common dso_local global i64 0, align 8
@CCSGRESET = common dso_local global i32 0, align 4
@LONGJMP_ADDR = common dso_local global i64 0, align 8
@INVALID_ADDR = common dso_local global i32 0, align 4
@AHD_SHOW_FIFOS = common dso_local global i32 0, align 4
@ahd_debug = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ahd_clear_fifo(%struct.ahd_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ahd_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ahd_softc* %0, %struct.ahd_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %7 = call i32 @ahd_save_modes(%struct.ahd_softc* %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @ahd_set_modes(%struct.ahd_softc* %8, i32 %9, i32 %10)
  %12 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %13 = load i64, i64* @DFFSXFRCTL, align 8
  %14 = load i32, i32* @RSTCHN, align 4
  %15 = load i32, i32* @CLRSHCNT, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @ahd_outb(%struct.ahd_softc* %12, i64 %13, i32 %16)
  %18 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %19 = load i64, i64* @SG_STATE, align 8
  %20 = call i32 @ahd_inb(%struct.ahd_softc* %18, i64 %19)
  %21 = load i32, i32* @FETCH_INPROG, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %2
  %25 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %26 = load i64, i64* @CCSGCTL, align 8
  %27 = load i32, i32* @CCSGRESET, align 4
  %28 = call i32 @ahd_outb(%struct.ahd_softc* %25, i64 %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %2
  %30 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %31 = load i64, i64* @LONGJMP_ADDR, align 8
  %32 = add nsw i64 %31, 1
  %33 = load i32, i32* @INVALID_ADDR, align 4
  %34 = call i32 @ahd_outb(%struct.ahd_softc* %30, i64 %32, i32 %33)
  %35 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %36 = load i64, i64* @SG_STATE, align 8
  %37 = call i32 @ahd_outb(%struct.ahd_softc* %35, i64 %36, i32 0)
  %38 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %39 = load i32, i32* %5, align 4
  %40 = call i32 @ahd_restore_modes(%struct.ahd_softc* %38, i32 %39)
  ret void
}

declare dso_local i32 @ahd_save_modes(%struct.ahd_softc*) #1

declare dso_local i32 @ahd_set_modes(%struct.ahd_softc*, i32, i32) #1

declare dso_local i32 @ahd_outb(%struct.ahd_softc*, i64, i32) #1

declare dso_local i32 @ahd_inb(%struct.ahd_softc*, i64) #1

declare dso_local i32 @ahd_restore_modes(%struct.ahd_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
